# heapless-graphs-rs

./: .codespellrc  .pre-commit-config.yaml  Cargo.toml  DESIGN.md  README.md  TODO.md  build.sh
.github/workflows/: build.yaml  coverage.yml  cross.yaml  pre-commit.yaml
examples/: arbitrary_types.rs  astar_demo.rs  bellman_ford_example.rs  bfs.rs  dfs_comparison.rs  dfs_iterative.rs  dijkstra_example.rs  edges.rs  from_graph_demo.rs  greedy_coloring_example.rs  kruskals_example.rs  minimal.rs  topological_comparison.rs  topological_sort.rs  transpose_demo.rs
src/: adjacency_list.rs  adjacency_matrix.rs  algorithms.rs  containers.rs  conversions.rs  edge_list.rs  edgelist.rs  edges.rs  graph.rs  lib.rs  matrix.rs  matrix2.rs  mgraph.rs  nodes.rs  visited.rs
src/adjacency_list/: edgeiterator.rs  map_adjacency_list.rs  outgoing_nodes.rs  slice_adjacency_list.rs
src/adjacency_list/map_adjacency_list/: by_ref.rs  by_val.rs
src/adjacency_list/slice_adjacency_list/: by_ref.rs  by_val.rs
src/algorithms/: astar.rs  bellman_ford.rs  connected_components.rs  dijkstra.rs  greedy_coloring.rs  kahns.rs  kruskals.rs  tarjan_scc.rs  topological_sort.rs  transpose.rs  traversal.rs
src/containers/: djb2hash.rs  maps.rs  probing.rs  queues.rs  sets.rs
src/containers/maps/: staticdict.rs
src/containers/queues/: circularqueue.rs
src/containers/sets/: staticset.rs
src/edgelist/: edge_list.rs  edge_node_list.rs
src/edgelist/edge_list/: by_ref.rs  by_val.rs
src/edgelist/edge_node_list/: by_ref.rs  by_val.rs
src/edges/: edges_to_nodes.rs
src/matrix/: bit_map_matrix.rs  bit_matrix.rs  map_matrix.rs  simple_matrix.rs
src/matrix/map_matrix/: by_ref.rs  by_val.rs
tests/: pluggable.rs  remove_node.rs  remove_node_value.rs
