# SPDX-License-Identifier: Apache-2.0

[package]
name = "heapless_graphs"
authors = ["Kaido Kert <kaidokert@gmail.com>"]
version = "0.1.0"
edition = "2021"
description = """
Implementation of composable graphs for no_alloc environments
"""

keywords = ["graph", "static", "no-heap"]
categories = [ "data-structures", "no-std" ]
readme = "README.md"
license = "Apache-2.0"
exclude = ["/.github/*"]

[dependencies]
heapless = { version ="0.8.0" , optional = true }
itertools = { version = "0.14.0", default-features = false }
num-traits = { version = "0.2.19", optional = true, default-features=false }

[dev-dependencies]
hybrid-array = {  version = "0.1.0" }
num-traits = { version = "0.2.19" }

[features]
default = [ "heapless","num-traits" ]
std = []

[package.metadata.docs.rs]
all-features = true
