# SPDX-License-Identifier: Apache-2.0

[package]
name = "heapless_graphs"
authors = ["Kaido Kert <kaidokert@gmail.com>"]
version = "0.1.0"
edition = "2021"
description = """
Implementation of composable graphs for no_alloc environments
"""

keywords = ["graph", "static", "no-heap"]
categories = [ "data-structures", "no-std" ]
readme = "README.md"
license = "Apache-2.0"
exclude = ["/.github/*"]

[dependencies]
heapless = { version ="0.8.0" , optional = true }

[dev-dependencies]
hybrid-array = {  version = "0.1.0" }
log = "0.4.27"
test-log = "0.2.17"

[features]
default = [ "heapless" ]
std = []

[package.metadata.docs.rs]
all-features = true

[profile.dev]
debug = true           # Enable full debug symbols
opt-level = 0         # No optimizations for clearer debugging
lto = false           # Disable Link Time Optimization
strip = false         # Keep debug symbols
debug-assertions = true # Enable debug assertions
overflow-checks = true # Enable integer overflow checks
panic = "unwind"      # Better for debugging than abort
