# SPDX-License-Identifier: Apache-2.0

[package]
name = "heapless_graphs"
authors = ["Kaido Kert <kaidokert@gmail.com>"]
version = "0.2.2"
edition = "2021"
description = """
Implementation of composable graphs for no_alloc environments
"""
keywords = ["graph", "static", "no-heap"]
categories = [ "data-structures", "no-std", "no-std::no-alloc"]
readme = "README.md"
license = "Apache-2.0"
exclude = ["/.github/*"]
repository = "https://github.com/kaidokert/heapless-graphs-rs"
homepage = "https://github.com/kaidokert/heapless-graphs-rs"
documentation = "https://docs.rs/heapless_graphs"

[dependencies]
heapless = { version ="0.8.0" , optional = true }

[dev-dependencies]
hybrid-array = {  version = "0.1.0" }

[features]
default = [ "heapless" ]
std = []

[package.metadata.docs.rs]
all-features = true

[profile.dev]
debug = true           # Enable full debug symbols
opt-level = 0         # No optimizations for clearer debugging
lto = false           # Disable Link Time Optimization
strip = false         # Keep debug symbols
debug-assertions = true # Enable debug assertions
overflow-checks = true # Enable integer overflow checks
panic = "unwind"      # Better for debugging than abort
